fix(frontend): dark mode error fixed

--- a/src/components/Layout/index.module.css
+++ b/src/components/Layout/index.module.css
@@ -14,19 +14,10 @@
     font-size: 54pt;
     font-family: 'Amazon Ember V2', sans-serif;
     font-weight: 700;
-    background: -webkit-linear-gradient(0deg, #000000, #414141);
+    background: -webkit-linear-gradient(0deg, var(--main_title_left_color), var(--main_title_right_color));
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-}
-
-[data-theme='dark'] {
-    .landing_page_title {
-        background: -webkit-linear-gradient(0deg, #ffffff, #c4c4c4);
-        background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-    }
 }
 
 .landing_page_subtitle {
